# cluster-service

./: .gitignore  README.md  go.mod  go.sum  main.go
api/v1/: article.go  core_api.go  product_api.go
business_server/: Cargo.toml  application.yml
business_server/src/: main.rs
config/: config.ini  variable.go
constant/: config.ini  initializing.go  loghelper.go  variable.go
financial_server/: Cargo.toml
financial_server/src/: main.rs
funds_platform/: package-lock.json  package.json  vite.config.ts
funds_platform/src/: App.tsx  main.tsx
funds_platform/src-tauri/: Cargo.toml  tauri.conf.json
funds_platform/src-tauri/src/: lib.rs  main.rs
funds_platform/src-tauri/src/controller/: fund_controller.rs  mod.rs
funds_platform/src-tauri/src/dto/: fund_setting_dto.rs  mod.rs
funds_platform/src-tauri/src/service/: fund_service.rs  funds.txt  mod.rs
funds_platform/src-tauri/src/util/: error.rs
funds_platform/src-tauri/src/vo/: fund_net_worth_trend_vo.rs  mod.rs
funds_platform/src/pages/home/: index.less  index.tsx
handle/: mqtt.go
middleware/: cors.go  jwt.go  logger.go
model/: Article.go  ability.go  article.go  articleMapper.xml  db.go  log.go  logMapper.xml  product.go  standard_unit.go  user.go  userMapper.xml
model/primary/: log.go  product.go  user.go
pc_platform/: README.md  index.html  package-lock.json  package.json  vite.config.ts
pc_platform/src/: App.tsx  index.css  main.tsx  router.tsx
pc_platform/src-tauri/: Cargo.toml  tauri.conf.json
pc_platform/src-tauri/src/: error.rs  lib.rs  main.rs
pc_platform/src-tauri/src/controller/: mod.rs  os_controller.rs
pc_platform/src-tauri/src/entity/: mod.rs
pc_platform/src-tauri/src/entity/dto/: login.rs  mod.rs
pc_platform/src/config/: routes.ts
pc_platform/src/pages/home/: index.tsx
pc_platform/src/pages/layout/backend-v1/: index.less  index.tsx
pc_platform/src/pages/login/: index.tsx
pc_platform/src/pages/memory/note/: index.tsx
pc_platform/src/windows/: actions.ts
primary_server/: Cargo.toml  application.yml  application_1.yml
primary_server/src/: error.rs  lib.rs  main.rs
primary_server/src/config/: config.rs  log.rs
primary_server/src/controller/: img_controller.rs  mod.rs  sys_role_controller.rs  sys_user_controller.rs  system_controller.rs
primary_server/src/domain/dto/: mod.rs  sign_in.rs  user.rs
primary_server/src/domain/mapper/: db_dump_log_mapper.rs  log_mapper.rs  log_type_mapper.rs  mod.rs  plan_archive_mapper.rs  plan_mapper.rs  user_mapper.rs
primary_server/src/domain/table/: enums.rs  mod.rs  tables.rs
primary_server/src/domain/vo/: jwt.rs  mod.rs  sign_in.rs  user.rs  user_context.rs
primary_server/src/middleware/: auth.rs  auth_actix.rs  mod.rs
primary_server/src/service/: mem_service.rs  mod.rs  redis_service.rs  sys_dict_service.rs  sys_role_res_service.rs  sys_user_role_service.rs  sys_user_service.rs  system_service.rs
primary_server/src/util/: auth_util.rs  constant.rs  error.rs  mod.rs  scheduler.rs  token_util.rs
public_component/: Cargo.toml
public_component/src/: compare.rs  funds.rs  lib.rs  logger.rs  main.rs  message.rs  point.rs  thread.rs
public_component/src/dto/: fund_setting_dto.rs
public_component/src/service/: fund_service.rs  mod.rs
public_component/src/vo/: fund_income_vo.rs  fund_info_vo.rs  fund_net_worth_trend_vo.rs  mod.rs
redis_rw/: Cargo.toml
routes/: router.go
utils/: loghelper.go  setting.go
utils/ip/: ip_utils.go
utils/record/: operating_enum.go
utils/response/: response.go
utils/result/: response.go
utils/validator/: validator.go
