[package]
name = "primary_server"
version = "0.1.0"
authors = ["saya <saya@saya.ac.cn>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rbs = { version = "4.3" }
rbatis = { version = "4.3", features = [] }
rbdc-mysql={version="4.3"}
#rbatis orm dep must use async-std(Because actix-web relies on tokio0.2)
tokio = { version = "1", features = ["full"] }
#serde and json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
#log
log = "0.4"
#fast_log enable features = ["lz4", "zip", "gzip"], and edit src/config/log.rs fn choose_packer(),edit application.yml add log_pack_compress: "zip"
fast_log = { version = "1.5", features = [] }
futures= { version = "0.3.21", default-features = false, features = ["std"] }
#web server
actix-web = { version = "4", default-features = false, features = ["macros"] }
actix-http = "3"
#snowflake
rustflake = "0.1"
#http client,use rust-tls replace to native tls
reqwest = { version = "0.11", default-features = false, features = ["json", "tokio-rustls"] }
#static
lazy_static = "1.4.0"
futures-util = "0.3.21"
md5 = "0.7"
#redis
redis = { version = "0.22.3", features = ["tokio-comp"] }
# Excel工具
simple_excel_writer = "0.2.0"
# 日期时间库
chrono = { version = "0.4", features = ["serde"] }
# 定时任务
cron_tab = "0.1.4"
# 发送邮件
lettre="0.10.0-alpha.5"