[package]
name = "public_component"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#http client,use rust-tls replace to native tls
reqwest = { version = "0.11.11",default-features = false, features = ["json","cookies","rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
#map
indexmap = "1.7.0"
tokio = { version = "1", features = ["full"] }
#serde and json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 正则相关
regex = "1.7.0"
#用于货币金额
rust_decimal = "1.25.0"